package com.tunepruner.fourwards.data.daylist;

public interface DayListItem {

}
