package com.tunepruner.fourwards.data.log;

import java.util.ArrayList;

public class Log {
    private ArrayList<ClockTimeEntry> clockTimeEntries;
}
