package com.tunepruner.fourwards.data.plan;

public class AdjustedPlanItem {

}
